--- a/subgraphs/exchange-v3/template/package.json
+++ b/subgraphs/exchange-v3/template/package.json
@@ -7,15 +7,9 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "template": "mustache ../../../config/%NETWORK%.js subgraph.template.yaml > subgraph.yaml && mustache ../../../config/%NETWORK%.js utils/constants.template.ts > utils/constants.ts && mustache ../../../config/%NETWORK%.js utils/pricing.template.ts > utils/pricing.ts",
-    "auth": "graph auth --product hosted-service SUBGRAPH_KEY",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "deploy:goerli": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/exchange-v3-goerli subgraph.yaml",
-    "deploy:chapel": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/exchange-v3-chapel subgraph.yaml",
-    "deploy:eth": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/exchange-v3-eth subgraph.yaml",
-    "deploy:bsc": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/exchange-v3-bsc subgraph.yaml",
-    "deploy:zksync-goerli": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/exchange-v3-zksync-goerli subgraph.yaml",
-    "deploy:arb": "graph deploy --product hosted-service pancakeswap/exchange-v3-arb",
-    "deploy:polygon-zkevm-testnet": "graph deploy --studio exchange-v3-polygon-zkevm-test"
+    "create": "graph create --node http://135.181.114.124:8020/ icecreamswap/exchange-v3-core",
+    "deploy": "graph deploy icecreamswap/exchange-v3-core --node http://135.181.114.124:8020/ --ipfs http://135.181.114.124:5001/ subgraph.yaml"
   }
 }
