--- a/subgraphs/exchange-v2/package.json
+++ b/subgraphs/exchange-v2/package.json
@@ -6,12 +6,10 @@
   "author": "PancakeSwap",
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "template": "mustache ../../config/$NETWORK.js subgraph.template.yaml > subgraph.yaml && mustache ../../config/$NETWORK.js mappings/utils/index.template.ts > mappings/utils/index.ts && mustache ../../config/$NETWORK.js mappings/pricing.template.ts > mappings/pricing.ts",
-    "auth": "graph auth --product hosted-service SUBGRAPH_ACCESS_TOKEN",
+    "template": "mustache ../../config/%NETWORK%.js subgraph.template.yaml > subgraph.yaml && mustache ../../config/%NETWORK%.js mappings/utils/index.template.ts > mappings/utils/index.ts && mustache ../../config/%NETWORK%.js mappings/pricing.template.ts > mappings/pricing.ts",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "deploy": "graph deploy --product hosted-service pancakeswap/exhange-eth",
-    "deploy:polygon-zkevm": "graph deploy --studio exchange-v2-polygon-zkevm",
-    "deploy:zksync-goerli": "graph deploy --studio graph deploy --studio exchange-v2-zksync-testnet"
+    "create": "graph create --node http://135.181.114.124:8020/ icecreamswap/exchange-v2-%NETWORK%",
+    "deploy": "graph deploy icecreamswap/exchange-v2-%NETWORK% --node http://135.181.114.124:8020/ --ipfs http://135.181.114.124:5001/ subgraph.yaml"
   }
 }
