--- a/subgraphs/exchange-v2/subgraph.yaml
+++ b/subgraphs/exchange-v2/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: arbitrum-one
+    network: core
     source:
-      address: "0x02a84c1b3bbd7401a5f7fa98a384ebc70bb5749e"
+      address: "0x9e6d21e759a7a288b80eef94e4737d313d31c13f"
       abi: Factory
-      startBlock: 101022992
+      startBlock: 852448
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -34,7 +34,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pair
-    network: arbitrum-one
+    network: core
     source:
       abi: Pair
     mapping:
