--- a/subgraphs/blocks/package.json
+++ b/subgraphs/blocks/package.json
@@ -6,8 +6,10 @@
   "author": "PancakeSwap",
   "license": "GPL-3.0-or-later",
   "scripts": {
+    "template": "mustache ../../config/%NETWORK%.js subgraph.template.yaml > subgraph.yaml",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "deploy": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/blocks subgraph.yaml"
+    "create": "graph create --node http://135.181.114.124:8020/ icecreamswap/blocks-%NETWORK%",
+    "deploy": "graph deploy icecreamswap/blocks-%NETWORK% --node http://135.181.114.124:8020/ --ipfs http://135.181.114.124:5001/ subgraph.yaml"
   }
 }
