--- a/subgraphs/blocks/subgraph.template.yaml
+++ b/subgraphs/blocks/subgraph.template.yaml
@@ -6,7 +6,7 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: BSCValidatorSet
-    network: core
+    network: {{ network }}
     source:
       address: '0x0000000000000000000000000000000000001000'
       abi: BSCValidatorSet
