--- a/subgraphs/exchange-v3/template/package.json
+++ b/subgraphs/exchange-v3/template/package.json
@@ -9,7 +9,7 @@
     "template": "mustache ../../../config/%NETWORK%.js subgraph.template.yaml > subgraph.yaml && mustache ../../../config/%NETWORK%.js utils/constants.template.ts > utils/constants.ts && mustache ../../../config/%NETWORK%.js utils/pricing.template.ts > utils/pricing.ts",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "create": "graph create --node http://135.181.114.124:8020/ icecreamswap/exchange-v3-core",
-    "deploy": "graph deploy icecreamswap/exchange-v3-core --node http://135.181.114.124:8020/ --ipfs http://135.181.114.124:5001/ subgraph.yaml"
+    "create": "graph create --node http://135.181.114.124:8020/ icecreamswap/exchange-v3-%NETWORK%",
+    "deploy": "graph deploy icecreamswap/exchange-v3-%NETWORK% --node http://135.181.114.124:8020/ --ipfs http://135.181.114.124:5001/ subgraph.yaml"
   }
 }
