--- a/subgraphs/exchange-v2/package.json
+++ b/subgraphs/exchange-v2/package.json
@@ -9,7 +9,7 @@
     "template": "mustache ../../config/%NETWORK%.js subgraph.template.yaml > subgraph.yaml && mustache ../../config/%NETWORK%.js mappings/utils/index.template.ts > mappings/utils/index.ts && mustache ../../config/%NETWORK%.js mappings/pricing.template.ts > mappings/pricing.ts",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "create": "graph create --node http://135.181.114.124:8020/ icecreamswap/exchange-v2-%NETWORK%",
-    "deploy": "graph deploy icecreamswap/exchange-v2-%NETWORK% --node http://135.181.114.124:8020/ --ipfs http://135.181.114.124:5001/ subgraph.yaml"
+    "create": "graph create --node http://localhost:8020/ icecreamswap/exchange-v2-%NETWORK%",
+    "deploy": "graph deploy icecreamswap/exchange-v2-%NETWORK% --node http://localhost:8020/ --ipfs http://localhost:5001/ subgraph.yaml"
   }
 }
