--- a/subgraphs/affiliate-program/package.json
+++ b/subgraphs/affiliate-program/package.json
@@ -1,6 +1,7 @@
 {
   "name": "affiliate-program",
   "license": "UNLICENSED",
+  "version": "0.0.1",
   "scripts": {
     "auth": "graph auth --product hosted-service SUBGRAPH_KEY",
     "codegen": "graph codegen subgraph.yaml",
