--- a/subgraphs/blocks/package.json
+++ b/subgraphs/blocks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blocks",
   "description": "PancakeSwap Subgraph",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "repository": "git@github.com:pancakeswap/pancake-subgraph.git",
   "author": "PancakeSwap",
   "license": "GPL-3.0-or-later",
@@ -11,5 +11,9 @@
     "build": "graph build subgraph.yaml",
     "create": "graph create --node http://localhost:8020/ dumpyswap/blocks-mezo",
     "deploy": "graph deploy dumpyswap/blocks-mezo --node http://localhost:8020/ --ipfs http://localhost:5001/ subgraph.yaml"
+  },
+  "devDependencies": {
+    "@graphprotocol/graph-cli": "^0.21.1",
+    "@graphprotocol/graph-ts": "^0.20.1"
   }
 }
