--- a/subgraphs/blocks/subgraph.yaml
+++ b/subgraphs/blocks/subgraph.yaml
@@ -6,13 +6,14 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: BSCValidatorSet
-    network: mezo
+    network: mezo-testnet
     source:
       address: '0x0000000000000000000000000000000000001000'
       abi: BSCValidatorSet
+      startBlock: 500000
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.5
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       file: ./mappings/index.ts
       entities:
